--- a/style.css
+++ b/style.css
@@ -1,803 +1,10 @@
-* {
-    padding: 0px;
-    margin: 0px;
-}
-
-html {
-    width: 1440px;
-    margin: 0px;
-}
-
-.contact {
-    padding: 0px 25px 0px 0px;
-}
-
-.right_menu {
-    color: #AAA;
-    text-transform: uppercase;
-    size: auto;
-    margin-left: 1097px;
-    width: 343px;
-    height: 33px;
-    align-items: right;
-    display: flex;
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 33px;
-    letter-spacing: 1px;
-    text-align: left;
-
-}
-
-.language {
-    padding: 0px 0px 0px 25px;
-}
-
-.right_menu img {
-    padding: 13.5px 12.5px 4px 8px;
-    width: 14px;
-    height: 7px;
-}
-
-.bottom_header {
-    text-transform: uppercase;
-    align-items: center;
-    width: 1296px;
-    height: 99px;
-    display: flex;
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 2px;
-    text-align: center;
-
-}
-
-.room {
-    padding-left: 120px;
-    width: 50px;
-    height: 50px;
-}
-
-.geo {
-    margin-left: 293px;
-    ;
-    width: 20px;
-    height: 24px;
-}
-
-.telega {
-    padding-left: 46px;
-    width: 25px;
-    height: 25px;
-    margin-right: 0px;
-}
-
-.products {
-    padding-left: 261px;
-    width: 83px;
-    height: 15px;
-}
-
-.explore {
-    padding-left: 100px;
-    width: 69px;
-    height: 15px;
-}
-
-.shop {
-    padding-left: 120px;
-    width: 42px;
-    height: 15px;
-}
-
-.showrooms {
-    padding-left: 10px;
-    width: 103px;
-    height: 15px;
-}
-
-.first_img {
-    width: 1327px;
-    height: 746px;
-    padding: 49px 56px 80px 57px;
-}
-
-.text_design {
-    display: flex;
-}
-
-.text1 {
-    padding: 82px 0px 208px 175px;
-    font-family: Roboto;
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 58px;
-    letter-spacing: 0em;
-    text-align: left;
-    width: 355px;
-    height: 174px;
-    color: #1A1A1A;
-
-
-}
-
-.text2 {
-    padding: 93px 205px 211px 136px;
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 40px;
-    letter-spacing: 0em;
-    text-align: left;
-    width: 569px;
-    height: 160px;
-    color: #AAAAAA;
-
-}
-
-.section2 {
-    display: inline-block;
-    width: auto;
-    height: 962px;
-}
-
-.div_phone {
-    display: inline-block;
-    width: 588px;
-    height: 449px;
-    padding-right: 24px;
-    margin-left: 120px;
-}
-
-.div_focus {
-    display: inline-block;
-    width: 588px;
-    height: 449px;
-    padding-right: 24px;
-}
-
-.div_meeting {
-    padding-right: 24px;
-    margin-left: 120px;
-    display: inline-block;
-    width: 588px;
-    height: 449px;
-}
-
-.div_open {
-    padding-right: 24px;
-    display: inline-block;
-    width: 588px;
-    height: 449px;
-}
-
-.phone_ {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-}
-
-
-.focus_ {
-    color: #1A1A1A;
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0em;
-    text-align: left;
-
-}
-
-.meeting_ {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-}
-
-.open_meeting {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-}
-
-.brands {
-    width: 1090px;
-    height: 560px;
-    padding: 215px 175px 190px 175px;
-}
-
-.leading_brands {
-    font-family: Roboto;
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 48px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #1A1A1A;
-    width: 941px;
-    height: 48px;
-    padding: 3px 75px 27px 75px;
-}
-
-.counting {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #4a4a4a;
-    width: 280px;
-    height: 36px;
-    padding: 27px 405px 0px 405px;
-}
-
-.brands_img {
-    padding: 188px 0px 0px 0px;
-    width: 1144px;
-    height: 327px;
-}
-
-.dedbl {
-    width: 1344px;
-    height: 700px;
-    padding: 0px 48px 0px 48px;
-}
-
-.dedbl_header {
-    width: 1090px;
-    height: 216px;
-
-}
-
-.dedbl_head_text {
-    width: 1090px;
-    height: 216x;
-    padding: 199px 175px 0px 175px;
-    font-family: Roboto;
-    font-size: 48px;
-    font-weight: 400;
-    line-height: 56px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-
-}
-
-.div_images {
-    padding: 144px 0px 0px 0px;
-    margin-top: 144px;
-}
-
-.image_text {
-
-    width: 1440px;
-    height: 555px;
-    display: flex;
-}
-
-.seif {
-    margin-left: 229px;
-}
-
-.timer {
-    margin-left: 203px;
-}
-
-.qube {
-    margin-left: 226px;
-}
-
-.div_images p {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #AAAAAA;
-
-}
-
-.div_images h1 {
-    color: #1A1A1A;
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-
-}
-
-.seif_container {
-    margin-left: 175px;
-}
-
-.timer_container {
-    margin-left: 40px;
-}
-
-.cube_container {
-    margin-left: 40px;
-}
-
-.container4 {
-    width: 1340px;
-    height: 800px;
-    background-image: url(img/aaaa_negrbl.png);
-    margin: 0px 50px 240px 50px;
-}
-
-.container4 p {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 32px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #ffffff;
-}
-
-.comms {
-    width: 1200px;
-    height: 559.98px;
-    padding: 120px 48px 120px 48px;
-}
-
-.text_comm {
-    width: 228px;
-    height: 64px;
-}
-
-.first_comm {
-    width: 350px;
-    height: 145.31px;
-    padding: 0px 725px 0px 125px;
-}
-
-.second_comm {
-    width: 350px;
-    height: 155.45px;
-    padding: 32px 725px 32px 125px;
-}
-
-.third_comm {
-    width: 350px;
-    padding: 0px 725px 39.0px 125px;
-    height: 135.22px;
-}
-
-.more_reviews {
-    width: 184px;
-    height: 12px;
-    padding: 0px 891px 8.98px 125px;
-}
-
-.more_reviews p {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 12px;
-    letter-spacing: 0.75px;
-    text-align: left;
-    color: #ffffff;
-}
-
-.section5 {
-    width: 1296px;
-    height: 2856px;
-}
-
-.text5 {
-    width: 1090px;
-    width: 712px;
-    margin: 0px 175px 0px 175px;
-}
-
-.text5 p {
-    font-family: Roboto;
-    font-size: 46px;
-    font-weight: 400;
-    line-height: 52px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #AAAAAA;
-    width: 882px;
-    height: 260px;
-    padding: 240px 108px 0px 100px;
-}
-
-.text5 h1 {
-    color: #000000;
-    font-family: Roboto;
-    font-size: 46px;
-    font-weight: 400;
-    line-height: 52px;
-    letter-spacing: 0em;
-    text-align: left;
-    width: 861px;
-    height: 52px;
-    padding: 25px 129px 135px 100px;
-}
-
-.sell_direct {
-    width: 671px;
-    height: 672px;
-    display: flex;
-}
-
-.text_stol {
-    width: 529.31px;
-    height: 156px;
-    padding: 258px 0px 258px 0px;
-}
-
-.da {
-    width: auto;
-    height: 2856px;
-}
-
-.text_stol p {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #AAAAAA;
-    width: 311px;
-    height: 96px;
-    padding: 0px 128px 3px 90.31px;
-}
-
-.text_stol h1 {
-    font-family: Roboto;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-    width: 213px;
-    height: 36px;
-    padding: 0px 226px 27px 90.31px;
-}
-
-.sell_direct img {
-    width: 671px;
-    height: 672px;
-}
-
-.not_just {
-    width: 1200px;
-    height: 672px;
-    display: flex;
-    padding: 64px 0px 64px 0px;
-}
-
-.build_purpose {
-    width: 529.38px;
-    height: 240px;
-    padding: 216px 0px 216px 0px;
-}
-
-.build_purpose img {
-    width: 671px;
-    height: 672px;
-}
-
-.build_purpose h1 {
-    font-family: Roboto;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-    width: 206px;
-    height: 72px;
-    padding: 0px 213.37px 27px 110px;
-}
-
-.build_purpose p {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #AAAAAA;
-    width: 298px;
-    height: 144px;
-    padding: 0px 121.37px 3px 110px;
-}
-
-.design_sutan {
-    display: flex;
-    width: 1200px;
-    height: 672px;
-}
-
-.design_sutan img {
-    width: 671px;
-    height: 672px;
-}
-
-.sustan_text {
-    width: 529px.38;
-    height: 240px;
-    padding: 216px 0px 216px 0px;
-}
-
-.sustan_text h1 {
-    font-family: Roboto;
-    font-size: 32px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #1A1A1A;
-    width: 176px;
-    height: 72px;
-    padding: 0px 243px 0px 110.38px;
-}
-
-.sustan_text p {
-    font-family: Roboto;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #AAAAAA;
-    width: 309px;
-    height: 144px;
-    padding: 27px 110px 3px 110.38px;
-}
-
-.risk {
-    width: 1200px;
-    height: 465px;
-}
-
-.risk h1 {
-    width: 446px;
-    height: 51px;
-    padding: 63px 377px 0px 377px;
-    font-family: Roboto;
-    font-size: 46px;
-    font-weight: 400;
-    line-height: 51px;
-    letter-spacing: 0em;
-    text-align: center;
-    color: #000000;
-}
-
-.kartinki {
-    width: 800px;
-    height: 235px;
-    display: flex;
-    flex-wrap: nowrap;
-    text-transform: uppercase;
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0.75px;
-    text-align: center;
-    color: #1A1A1A;
-    padding: 0px 200px 0px 200px;
-}
-
-.trash {
-    width: 200px;
-    height: 100px;
-    padding: 65px 33px 66.66px 33.33px;
-}
-
-.rozetkadiv {
-    width: 200px;
-    height: 100px;
-    padding: 65px 33px 66.66px 33.33px;
-}
-
-.returns {
-    width: 200px;
-    height: 100px;
-    padding: 65px 0px 66.66px 33px;
-}
-
-.get_a_room {
-    width: 146px;
-    height: 50px;
-    margin: 0px 527px 26px 527px;
-    text-transform: uppercase;
-    color: #ffffff;
-    background-color: #46856E;
-    border: none;
-    border-radius: 3px;
-}
-
-.chitat {
-    color: #AAAAAA;
-    width: 138px;
-    height: 14px;
-    font-family: Roboto;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin: 0px 531px 24px 531px;
-}
-
-footer {
-    width: 1440px;
-    height: 619px;
-    background-color: #2b2b2b;
-    display: flex;
-}
-
-.topanch {
-    width: 180px;
-    height: 13px;
-    transform: rotate(-90deg);
-    margin: 85px 406px 22px 33px;
-    font-family: Roboto;
-    font-size: 11px;
-    font-weight: 400;
-    line-height: 13px;
-    letter-spacing: 2.4px;
-    color: #FFFFFF;
-}
-
-.footer_contacts {
-    width: 1200px;
-    height: 471px;
-    margin: 97px 120px 51px 120px;
-    display: flex;
-}
-
-.white_room {
-    width: 87px;
-    height: 471px;
-}
-
-.about_support {
-    width: 340px;
-    height: 471px;
-    margin: 0px 69px 51px 69px;
-}
-
-.follow_us {
-    width: 129px;
-    height: 471px;
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    letter-spacing: 0.5px;
-    text-align: left;
-    color: #ffffff;
-}
-
-.smlink {
-    width: 129px;
-    height: 27px;
-    margin: 17px 0px 406px 0px;
-}
-
-.smlink img {
-    width: 20px;
-    height: 20px;
-}
-
-.mailing_list p {
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #ffffff;
-}
-
-form {
-    padding: 30px 0px 16px 0px;
-    color: #2b2b2b;
-}
-
-form textarea {
-    border-radius: 3px;
-    width: 327px;
-    height: 54px;
-    resize: none;
-    background-color: #2b2b2b;
-}
-
-.country_select {
-    display: flex;
-    width: 104px;
-    height: 21px;
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #ffffff;
-    margin: 0px 0px 56px 223px;
-}
-
-.country_select p {
-    opacity: 50%;
-}
-
-.country_select img {
-    width: 14px;
-    height: 7px;
-    margin: 7px 0px 7px 4px;
-}
-
-.recieve {
-    width: 369px;
-    height: 78px;
-    font-family: Roboto;
-    font-size: 11px;
-    font-weight: 400;
-    line-height: 13px;
-    letter-spacing: 2.4000000953674316px;
-    text-align: left;
-
-}
-
-.checkmark {
-    color: #2196f3;
-    width: 28px;
-    height: 26px;
-    color: #2b2b2b;
-}
-
-.check_class {
-    margin: 231px 20px 214px 21px;
-}
-
-div
+*
 {
-    width: clamp(min(10vw,30%),400px, max(100%,55rem));
+    margin: 0;
+    padding: 0;
 }
-/* Стили для экранов шириной до 600px */
-div {
-    width: clamp(10vw, 30%, 400px);
-}
+body
+{
+    background: linear-gradient(108.13deg, #320000 1%, #0F0323 37.66%, #322204 72.27%, #000230 98.74%);
 
-/* Стили для экранов шириной более 600px и до 1200px */
-@media (min-width: 600px) and (max-width: 1200px) {
-    div {
-        width: clamp(20vw, 40%, 600px);
-    }
-}
-
-/* Стили для экранов шириной более 1200px */
-@media (min-width: 1200px) {
-    div {
-        width: clamp(30vw, 60%, 800px);
-    }
 }
